# gpxtractor

./: .gitignore  README.md  pyproject.toml
assets/rides/: Lunch_Ride.tcx  activity_9789484438.gpx  activity_9789484438.tcx
assets/runs/: activity_10062574997.gpx  activity_10062574997.tcx
gpxtractor/: __init__.py  _cli_dash.py  _core.py  _fit_extraction.py  _transformation.py  _tui.py  _tui_graphs.py  ansi_styling.py  area_graphs.py  cli.py  content.py  fit_extraction.py  tables.py  transformation.py  tui_framework.py  utils.py  xml_extraction.py
gpxtractor/sql/: compute_distance_and_speed.sql  compute_speed.sql  haversine_formula.sql  km_data_query.sql  lap_data_query.sql  overall_stats.sql  preprocess_data.sql  preprocess_running_data.sql  tui_graph_x_distance.sql  tui_graph_x_time.sql
tests/: conftest.py  helpers.py  test_core.py  test_fit_extraction.py  test_gpxtractor.py  test_transformation.py  test_xml_extraction.py
tests/resources/rides/: Lunch_Ride.fit  Lunch_Ride.gpx
tests/resources/runs/: Morning_Run.fit  Morning_Run.gpx  Morning_Run.tcx
