[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gpxtractor"
version = "0.1.0"
description = "GPX, TCX and FIT data extraction and transformation for Python"
authors = [
    {name = "Charlie Stapylton", email = "278091496+c-stap@users.noreply.github.com"},
]
dependencies = [
    "lxml>=6.0.2",
    "numpy>=2.3.1",
    "pyarrow>=20.0.0",
    "pandas>=2.3.1",
    "duckdb>=1.4.4",
    "fitdecode>=0.11.0",
]
readme = "README.md"
requires-python = ">=3.13"

[project.optional-dependencies]
cli = ["visidata"]

[project.scripts]
gpxtractor = "gpxtractor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gpxtractor*", "gpxtractor.sql*"]

[tool.setuptools.package-data]
gpxtractor = ["sql/*.sql"]
